--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/router": "~8.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "node-forge": ">=1.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.3",
@@ -42,6 +43,7 @@
     "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.4.3",
+    "node-forge": ">=1.0.0"
   }
 }
