--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "@angular/animations": "~8.1.1",
     "@angular/common": "~8.1.1",
     "@angular/compiler": "~8.1.1",
-    "@angular/core": "~8.1.1",
+    "@angular/core": "^14.0.0",
     "@angular/forms": "~8.1.1",
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
+    "node-forge": ">=1.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "node-forge": ">=1.0.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.3",
+    "@angular-devkit/build-angular": "^14.0.0",
     "@angular/cli": "^12.2.3",
     "@angular/compiler-cli": "^12.2.3",
     "@angular/language-service": "~8.1.1",
@@ -35,15 +35,15 @@
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^6.3.4",
+    "karma": "^6.3.20",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "node-forge": ">=1.0.0",
     "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3",
-    "node-forge": ">=1.0.0"
+    "typescript": "~3.4.3"
   }
 }
